--- a/dose_diaria/pubspec.yaml
+++ b/dose_diaria/pubspec.yaml
@@ -49,16 +49,16 @@ dev_dependencies:
     
 
 flutter_native_splash:
-  android: true
-  ios: true
-  web: false
-  background_image: "assets/image/splash_screen.png"
-  image: assets/images/logo1.png
+  #android: true
+  #ios: true
+  #web: false
+  #background_image: "assets/image/splash_screen.png"
+  #image: assets/images/logo1.png
   
 
-  android_12: 
-    color: #ffc7eb
-    image: "assets/image/android.png"
+  #android_12: 
+  # color: #ffc7eb
+    #image: "assets/image/android.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -81,7 +81,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
 
-  - assets/images/
+  - assets/
   
 
 assets:
