Atualizando Layouts e adicionando card

--- a/dose_diaria/pubspec.yaml
+++ b/dose_diaria/pubspec.yaml
@@ -40,11 +40,16 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^3.0.0
   firebase_auth: ^5.0.0
+  routefly: ^2.0.2
+  flutter_web_plugins:
+    sdk: flutter
+  flip_card: ^0.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   lints: ^4.0.0
+  flip_card: ^0.7.0
   
     
 
