Adicionando background da TelaEmotion

--- a/dose_diaria/pubspec.yaml
+++ b/dose_diaria/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter_native_splash: ^2.4.0
-  
+  font_awesome_flutter: ^10.1.0
 
   flutter:
     sdk: flutter
